best-practices/restrict-node-port.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      This policy restricts the creation of Services with type NodePort.
      NodePort services expose applications on a static port on each node, which
      can pose security risks and complicate network management.
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/title: Restrict NodePort Services
  name: restrict-nodeport
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services
  validationActions:
    - Audit
  validations:
    - expression: object.spec.type != 'NodePort'
      message: Services of type NodePort are not allowed.
